Added different vision angle parameters for prey and predators

--- a/index.html
+++ b/index.html
@@ -314,7 +314,11 @@
             </div>
 
             <div>
-                Vision Cone Angle (degrees): <input type="text" id="agent_vision_angle" value="180">
+                Vision Cone Angle for Prey (degrees): <input type="text" id="agent_prey_vision_angle" value="180">
+            </div>
+
+            <div>
+                Vision Cone Angle for Predators (degrees): <input type="text" id="agent_predator_vision_angle" value="180">
             </div>
             <br>
         </div>
